--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -4,7 +4,10 @@
   <!--  -->
   <div class="container-fluid d-flex align-items-center">
       <!-- RouterLink va généré pour nous l'attribut href -->
-      <a class="navbar-brand me-5 ps-5"   [routerLink]="'/accueil'"><span class="h3 me-5">IT Training</span></a>
+      <a class="navbar-brand me-5 ps-5"   [routerLink]="'/accueil'">
+        <img src="assets/img/logoit.png" alt="image"/> 
+        <span class="h3 me-5">IT Training</span>
+      </a>
 
       <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
       <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
@@ -29,22 +32,22 @@
                   </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link h6 me-3 p-3" [routerLink]="'certification'" (click)="isMenuCollapsed = true">
+                  <a class="nav-link h6 me-3 p-3" *ngIf="connexionService.isConnected()==false" [routerLink]="'certification'" (click)="isMenuCollapsed = true">
                       Certifications
                   </a>                   
               </li>
               <li class="nav-item">
-                <a class="nav-link h6 me-3 p-3" [routerLink]="'certification'" (click)="isMenuCollapsed = true">
-                    Financement / CPF
+                <a class="nav-link h6 me-3 p-3" *ngIf="connexionService.isApprenant()==true" [routerLink]="'certification'" (click)="isMenuCollapsed = true">
+                    mon panier 
                 </a>                   
               </li>
-              <li class="nav-item ">
-                <a class="nav-link h6 me-3 p-3" [routerLink]="'contact'" (click)="isMenuCollapsed = true">
-                    Contact
+              <li class="nav-item">
+                <a class="nav-link h6 me-3 p-3" *ngIf="connexionService.isFormateur()==true" [routerLink]="'certification'" (click)="isMenuCollapsed = true">
+                    mes sessions 
                 </a>                   
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link  dropdown-toggle h6 me-3 p-3" data-bs-toggle="dropdown"  [routerLink]="'#'"  (click)="isMenuCollapsed = true">
+                <a class="nav-link  dropdown-toggle h6 me-3 p-3" *ngIf="connexionService.isResponsable()==true" data-bs-toggle="dropdown"  [routerLink]="'#'"  (click)="isMenuCollapsed = true">
                     Administration
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark fs-6">
@@ -53,11 +56,27 @@
                   <li><a class="dropdown-item" href="#">Gestion de la logistique</a></li>
                 </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link  dropdown-toggle h6 me-3 p-3" *ngIf="connexionService.isResponsable()==true" data-bs-toggle="dropdown"  [routerLink]="'#'"  (click)="isMenuCollapsed = true">
+                  Dashboard
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark fs-6">
+                <li><a class="dropdown-item" [routerLink]="'/dashboard/dashboard_formation'">tableau de bord formation</a></li>
+                <li><a class="dropdown-item" [routerLink]="'/dashboard/dashboard_logistique'">tableau de bord logistique</a></li>
+              </ul>
+          </li>
+            <li class="nav-item ">
+              <a class="nav-link h6 me-3 p-3" [routerLink]="'contact'" (click)="isMenuCollapsed = true">
+                  Contact
+              </a>                   
+            </li>
           </ul>
           <form  (ngSubmit)="getSearchWord()" class="d-flex ms-5" role="search">
             <input class="form-control ms-5 me-2" type="search" placeholder="Rechercher des formations" aria-label="Search" name="search" [(ngModel)]="word">
             <button class="btn btn-outline-success" type="submit">Rechercher</button>
           </form>
+          <button *ngIf="connexionService.isConnected()==false" class="ms-4 btn btn-outline-success" [routerLink]="['/connexion']">connexion</button>
+          <button *ngIf="connexionService.isConnected()==true" class="ms-4 btn btn-outline-success" (click)="onLogout()">deconnexion</button>
       </div>
   </div>
 </nav>
@@ -79,8 +98,11 @@
     <section class="">
       <p class="d-flex justify-content-center align-items-center">
         <span class="me-3">Register for free</span>
-        <button mdbRipple type="button" class="btn btn-outline-light btn-rounded">
-          Sign up!
+        <button mdbRipple type="button" *ngIf="connexionService.isConnected()==false" class="btn btn-outline-light btn-rounded">
+          se connecter!
+        </button>
+        <button mdbRipple type="button" *ngIf="connexionService.isConnected()==true" class="btn btn-outline-light btn-rounded">
+          se déconnecter!
         </button>
       </p>
     </section>
