--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container-fluid full mt-5">
     <div class="row justify-content-md-center">
       <div class="col-md-4">
       <div class="alert alert-danger" *ngIf="erreur == 1">
